tests/Houtamelo.Spire.SourceGenerators.Tests/Performance/InlinerStructDiagnostics/cases/SPIRE017_ref_readonly_parameter.cs
//@ should_fail
// SPIRE017: ref readonly parameter is not supported by [InlinerStruct].
using Houtamelo.Spire;
namespace TestNs
{
    public static partial class Samples
    {
        [InlinerStruct]
        public static void Take(ref readonly int x) //~ ERROR
        { }
    }
}
